Fixate footer hover reactions on mobile devices

--- a/STYLE/Style.css
+++ b/STYLE/Style.css
@@ -3038,6 +3038,9 @@ section article{
     #DeckCloud .Card .Description{
         font-size: .9em;
     }
+    #Footer > a .Line{
+        transform: translate(-50%, -50%) scaleY(1);
+    }
 }
 @media screen and (max-width: 600px){
     #SpaceCyclone {
